--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.5",
     "fastapi[standard]>=0.116.2",
     "passlib[bcrypt]>=1.7.4",
-    "psycopg[binary]>=3.2.10",
+    "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.11.0",
     "pyjwt>=2.10.1",
     "sqlmodel>=0.0.25",
 ]
