--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.5",
     "fastapi[standard]>=0.116.2",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[bcrypt]<2.0.0,>=1.7.4",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.11.0",
     "pyjwt>=2.10.1",
     "sqlmodel>=0.0.25",
+    # Pin bcrypt until passlib supports the latest
+    "bcrypt==4.3.0"
 ]
